#787 #701 - agnostic encoder baseline, cleanup constructors